--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,8 @@ inherit_from: .rubocop_todo.yml
 
 AllCops:
   TargetRubyVersion: 3.1.2
+  Exclude:
+    - spec/lib/support/*
 
 Layout/LineLength:
   Max: 150
