--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -6,7 +6,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu, macos]
-        ruby: [2.5, 2.6, 2.7]
+        ruby: [3.1]
     runs-on: ${{ matrix.os }}-latest
     steps:
     - uses: actions/checkout@v2
