--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -1,11 +1,11 @@
-name: Code quality
-on: [push]
 jobs:
-  lint:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Rubocop checks
-        uses: gimenete/rubocop-action@1.0
+      - uses: actions/checkout@v1
+      - name: RuboCop Linter
+        uses: andrewmcodes/rubocop-linter-action@v3.3.0
+        with:
+          action_config_path: ".github/config/rubocop_linter_action.yml" 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
