--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,7 +3,7 @@ inherit_from: .rubocop_todo.yml
 AllCops:
   TargetRubyVersion: 3.1.2
   Exclude:
-    - spec/lib/support/*
+    - spec/lib/schema_to_dbml/support/*
 
 Layout/LineLength:
   Max: 150
