--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,3 @@
-inherit_from: .rubocop_todo.yml
-
 AllCops:
   TargetRubyVersion: 3.1.2
   Exclude:
@@ -9,6 +7,12 @@ AllCops:
 
 Layout/LineLength:
   Max: 150
+
+Metrics/MethodLength:
+  Max: 14
+
+Metrics/AbcSize:
+  Max: 24
 
 Style/Documentation:
   Enabled: false
@@ -72,3 +76,6 @@ Style/MethodCallWithArgsParentheses:
  
 Gemspec/DevelopmentDependencies:
   Enabled: false
+
+Metrics/ParameterLists:
+  Max: 7
