--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -9,6 +9,7 @@ jobs:
       - name: RuboCop Linter
         uses: ruby/setup-ruby@v1
         with:
+          ruby-version: 3.1
           bundler-cache: true
       - name: Run rubocop
         run: |
