--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -15,9 +15,7 @@ jobs:
     - name: Run tests
       run: |
         bundle exec rspec --require spec_helper --require schema_to_dbml
-    - name: Upload code coverage
-      uses: codecov/codecov-action@v1
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v2.0.0
       with:
-        fail_ci_if_error: true
-        file: ./coverage/.resultset.json
         token: ${{ secrets.CODECOV_TOKEN }}
