feat: allow to have custom dbml content; fix a problem regarding instances on custom settings configuration

--- a/lib/schema_to_dbml/configs/custom_config.yml
+++ b/lib/schema_to_dbml/configs/custom_config.yml
@@ -8,3 +8,4 @@ custom_project_notes: |
   - Specifies the appropriate database type (e.g., PostgreSQL)
   - Provides meaningful project information and descriptions
 custom_primary_key: "id integer [pk, unique, note: 'Unique identifier and primary key']"
+custom_dbml_content: ''
