--- a/lib/schema_to_dbml/configs/custom_config.yml
+++ b/lib/schema_to_dbml/configs/custom_config.yml
@@ -1,5 +1,5 @@
 custom_project_name: 'dbml_database_definition'
-custom_database_type: "'PostgreSQL'"
+custom_database_type: 'PostgreSQL'
 custom_project_notes: |
   # My Project Notes
   This is a **project** that documents the database. Here are some key points:
