feat: add new config custom_dbml_file_path

--- a/lib/schema_to_dbml/configs/custom_config.yml
+++ b/lib/schema_to_dbml/configs/custom_config.yml
@@ -9,3 +9,4 @@ custom_project_notes: |
   - Provides meaningful project information and descriptions
 custom_primary_key: "id integer [pk, unique, note: 'Unique identifier and primary key']"
 custom_dbml_content: ''
+custom_dbml_file_path: 'db/schema.dbml'
