--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -22,6 +22,7 @@ jobs:
       run: |
         bundle exec rspec --require spec_helper --require schema_to_dbml
     - name: Sync with undercover
+      if: ${{ matrix.ruby == 3.3 }}
       run: |
         REPO_NAME=$(echo ${{ github.repository }} | cut -d'/' -f2)
         ruby -e "$(curl -s https://undercover-ci.com/uploader.rb)" -- \
