--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -3,11 +3,17 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
+    name: "Ruby ${{ matrix.ruby }}"
+    strategy:
+      fail-fast: false
+      matrix:
+        ruby: [3.1, 3.2, 3.3]
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 3.1
+        bundler-cache: true
+        ruby-version: ${{ matrix.ruby }}
     - name: Bundle install
       run: |
         gem install bundler
@@ -16,6 +22,7 @@ jobs:
       run: |
         bundle exec rspec --require spec_helper --require schema_to_dbml
     - name: Sync with undercover
+      if: ${{ matrix.ruby == 3.3 }}
       run: |
         REPO_NAME=$(echo ${{ github.repository }} | cut -d'/' -f2)
         ruby -e "$(curl -s https://undercover-ci.com/uploader.rb)" -- \
