fix: update rubocop rules

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,7 @@
 AllCops:
   TargetRubyVersion: 3.1.2
   Exclude:
-    - spec/lib/schema_to_dbml/support/*
-    - spec/support/files/*
+    - spec/support/**/*
     - vendor/bundle/**/*
   NewCops: enable
 
