--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,8 @@
+inherit_from: .rubocop_todo.yml
+
+require:
+  - rubocop-rspec
+
 AllCops:
   TargetRubyVersion: 3.1.2
   Exclude:
@@ -70,7 +75,7 @@ Style/RedundantFetchBlock:
 
 Style/MethodCallWithArgsParentheses:
   Enabled: false
- 
+
 Gemspec/DevelopmentDependencies:
   Enabled: false
 
