fix: add another level of config for custom tables

--- a/lib/schema_to_dbml/configs/custom_config.yml
+++ b/lib/schema_to_dbml/configs/custom_config.yml
@@ -17,5 +17,6 @@ custom_dbml_content: |
 custom_dbml_file_path: 'db/schema.dbml'
 custom_tables:
   posts:
-    status:
-      type: post_status
+    attributes:
+      status:
+        type: post_status
