--- a/spec/support/files/custom_config_example.yml
+++ b/spec/support/files/custom_config_example.yml
@@ -2,9 +2,10 @@ custom_project_name: 'custom_project_name'
 custom_database_type: "'custom_database'"
 custom_project_notes: 'custom_notes'
 custom_tables:
-  posts:
-    status:
-      type: 'post_status'
+  attributes:
+    posts:
+      status:
+        type: 'post_status'
 custom_dbml_content: |
   Enum post_status {
     draft [note: 'The post is still being created and not yet published.']
