feat: update converter to work with dbml parser 0.9.1

--- a/lib/schema_to_dbml/configs/custom_config.yml
+++ b/lib/schema_to_dbml/configs/custom_config.yml
@@ -7,6 +7,6 @@ custom_project_notes: |
   - Utilizes the custom primary key for better indexing
   - Specifies the appropriate database type (e.g., PostgreSQL)
   - Provides meaningful project information and descriptions
-custom_primary_key: "id integer [pk, unique, note: 'Unique identifier and primary key']"
+custom_primary_key: "id integer [pk, unique, note: '''Unique identifier and primary key''']"
 custom_dbml_content: ''
 custom_dbml_file_path: 'db/schema.dbml'
