feat: add custom tables config (#75)
Co-authored-by: Ricardo Ribeiro <ricardo.ribeiro@knokcare.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -81,3 +81,9 @@ Gemspec/DevelopmentDependencies:
 
 Metrics/ParameterLists:
   Max: 8
+
+RSpec/NestedGroups:
+  Max: 4
+
+RSpec/MessageSpies:
+  EnforcedStyle: receive
