--- a/spec/support/files/custom_config_example.yml
+++ b/spec/support/files/custom_config_example.yml
@@ -9,7 +9,7 @@ custom_tables:
         type: post_status
 custom_dbml_content: |
   Enum post_status {
-    draft [note: 'The post is still being created and not yet published.']
-    published [note: 'The post is publicly visible and accessible to everyone.']
-    archived [note: 'The post is no longer publicly visible, but it's still saved in the system for reference or historical purposes']
+    draft [note: '''The post is still being created and not yet published.''']
+    published [note: '''The post is publicly visible and accessible to everyone.''']
+    archived [note: '''The post is no longer publicly visible, but it's still saved in the system for reference or historical purposes''']
   }
